# ratel-runner

./: .gitignore  LICENSE  Material_Options.yml  Material_Options_MaterialMesh.yml  Material_Options_Voxel.yml  Material_Options_Voxel_Air.yml  README.md  Ratel_Solver_Options.yml  cylinder.geo  gup_mpm_experiment.py  mpm_confined_compression.py  pyproject.toml
src/ratel_impm_press/: config.py  experiment.py  local.py  main.py  sweep.py
src/ratel_impm_press/experiments/: efficiency.py  press_common.py  press_no_air.py  press_sticky_air.py
src/ratel_impm_press/flux/: __init__.py  flux.py  machines.py
src/ratel_impm_press/yml/: Material_Options_Voxel.yml  Material_Options_Voxel_Air.yml  Ratel_Solver_Options.yml
src/ratel_runner/: main.py
src/ratel_runner/helper/: config.py  experiment.py  main.py  utilities.py
src/ratel_runner/helper/flux/: __init__.py  fluid.py  flux.py  machines.py
src/ratel_runner/helper/flux/mnemonicode/: __init__.py  __init__.pyi  _wordlist.py
src/ratel_runner/mpm/: local.py  main.py  sweep.py
src/ratel_runner/mpm/experiments/: efficiency.py  press_boundary.py  press_common.py  press_no_air.py  press_sticky_air.py
src/ratel_runner/mpm/experiments/yml/: common_solver.yml  press_no_air.yml  press_no_air_damage.yml  press_no_air_monoclinic.yml  press_no_air_neo_hookean.yml  press_no_air_triclinic.yml  press_sticky_air.yml
src/ratel_runner/mpm/yml/: common_solver.yml
src/ratel_runner/postprocess/: main.py
src/ratel_runner/postprocess/plot/: pole_diagram.py
tests/helper/: test_fluid.py
