[project]
name = "ratel-impm-press"
version = "0.1.17.2"
description = "Experiment Scripts for Ratel Implicit Material Point Method"
authors = [
    {name = "Zach Atkins",email = "zach.atkins@colorado.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer (>=0.15.2,<0.16.0)",
    "gmsh (>=4.13.1,<5.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
]

[project.scripts]
ratel-impm = "ratel_impm_press.main:app"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "ratel_impm_press", from = "src"}]
