[project]
name = "ratel-runner"
version = "0.2.0"
description = "Utilities for building and running the Ratel finite element library"
authors = [
    {name = "Zach Atkins",email = "zach.atkins@colorado.edu"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "ratel-helper",
    "typer<1.0.0,>=0.15.2",
]
optional-dependencies = { mpm = ["ratel-impm"] }

[project.scripts]
ratel-runner = "ratel_runner.main:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
includes = ["src/ratel_runner"]
module-name = 'ratel_runner'

[tool.uv.workspace]
members = ["packages/*"]


[tool.uv.sources]
ratel-helper = { workspace = true }
ratel-impm = { workspace = true }
