[project]
name = "ratel-runner"
version = "0.4.0"
description = "Utilities for building and running the Ratel finite element library"
authors = [
    {name = "Zach Atkins",email = "zach.atkins@colorado.edu"}
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
readme = "README.md"
keywords = ["Ratel", "finite elements", "scientific computing", "HPC", "material point method", "mpm"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

requires-python = ">=3.9,<4.0"
dependencies = [
    "typer<1.0.0,>=0.15.2",
]
optional-dependencies = { mpm = ["gmsh<5.0.0,>=4.13.1", "pandas<3.0.0,>=2.2.3", "pyyaml>=6.0.2,<7.0.0"] }

[project.urls]
# Homepage = "https://example.com"
# Documentation = "https://readthedocs.org"
Repository = "https://github.com/zatkins-dev/ratel-runner"
Issues = "https://github.com/zatkins-dev/ratel-runner/issues"
# Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
ratel-runner = "ratel_runner.main:app"

[build-system]
requires = ["uv_build>=0.8.0,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
includes = ["src/ratel_runner"]
module-name = 'ratel_runner'

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
